fixed data path

--- a/data_processing/data processing demo.ipynb
+++ b/data_processing/data processing demo.ipynb
@@ -18,7 +18,7 @@
     "%matplotlib inline\n",
     "\n",
     "SENSOR = 'S3'\n",
-    "DATASET_PATH = './methane-propane-raw_data/training_data'"
+    "DATASET_PATH = './methane-propane/merged data/'+SENSOR"
    ]
   },
   {
@@ -337,7 +337,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
